--- a/Ez_Video_Audio_Player/jQuery_control.html
+++ b/Ez_Video_Audio_Player/jQuery_control.html
@@ -16,7 +16,17 @@
     <button id="vplay">play video</button>
     <button id="vpause">pause video</button>
 
-    <video src="video/vivaldi.mp4" autoplay muted loop></video>
-    <audio src="audio/Honey_Bee_01_web.mp3"></audio>
+    <video src="video/vivaldi.mp4" muted id="myVideo"></video>
+    <audio src="audio/Honey_Bee_01_web.mp3" id="myaudio"></audio>
+
+    <script>
+      $(function() {
+        var myVideo = $("#myVideo");
+
+        $("#vplay").click(function() {
+          myVideo.get(0).play();
+        });
+      });
+    </script>
   </body>
 </html>
