--- a/Ez_Video_Audio_Player/javascript_control2.html
+++ b/Ez_Video_Audio_Player/javascript_control2.html
@@ -10,8 +10,8 @@
     <script src="http://code.jquery.com/jquery-1.12.4.min.js"></script>
   </head>
   <body>
-    <button id="aplay" onclick="playAudio()">Play music</button>
-    <button id="apause" onclick="pauseAudio()">Pause music</button><br />
+    <button id="aplay">Play music</button>
+    <button id="apause">Pause music</button><br />
     <hr />
     <button id="vplay">play video</button>
     <button id="vpause">pause video</button>
@@ -22,10 +22,13 @@
     <script>
       var myAudio = document.getElementById("myaudio");
 
+      document.getElementById("aplay").addEventListener("click", playAudio);
+      document.getElementById("apause").addEventListener("click", pauseAudio);
+
       function playAudio() {
         myAudio.play();
       }
-      function playAudio() {
+      function pauseAudio() {
         myAudio.pause();
       }
     </script>
