--- a/Ez_Waxom/index.html
+++ b/Ez_Waxom/index.html
@@ -103,13 +103,58 @@
         <a href="" class="prev">Prev</a>
         <a href="" class="next">Next</a>
       </p>
-      <p class="pager"></p>
+      <p class="pager clearfix"></p>
     </div>
     <main class="content">
-      <section class="services container"></section>
+      <section class="services container clearfix">
+        <div class="service_item">
+          <span class="icon"><i class="fas fa-pencil-alt"></i></span>
+          <h4>Web &amp; App Design</h4>
+          <p>
+            am liber tempor cum soluta nobis eleifend option congue nihil
+            imperdiet doming id quod mazim.
+          </p>
+          <span class="status"></span>
+        </div>
+        <div class="service_item">
+          <span class="icon"><i class="fas fa-leaf"></i></span>
+          <h4>Development</h4>
+          <p>
+            Lorem ipsum dolor sit amet, adipiscing elit, sed diam nonummy nibh
+            euismod tincidunt ut laoreet.
+          </p>
+          <span class="status"></span>
+        </div>
+        <div class="service_item">
+          <span class="icon"><i class="fas fa-cog"></i></span>
+          <h4>Customization</h4>
+          <p>
+            Nam liber tempor cum soluta nobis eleifend option congue nihil
+            imperdiet doming id quod mazim.
+          </p>
+          <span class="status"></span>
+        </div>
+        <div class="service_item">
+          <span class="icon"><i class="fas fa-bullhorn"></i></span>
+          <h4>Marketing</h4>
+          <p>
+            Nam liber tempor cum soluta nobis eleifend option congue nihil
+            imperdiet doming id quod mazim.
+          </p>
+          <span class="status"></span>
+        </div>
+      </section>
       <!--services-->
       <section class="realization">
-        <div class="container"></div>
+        <div class="container">
+          <h3 class="content_tt">Waxom is Realization of your Ideas.</h3>
+          <p class="content_desc">
+            Investigationes demonstraverunt lectores legere me lius quod ii
+            legunt saepius. Claritas est etiam processus dynamicus, qui sequitur
+            mutationem consuetudium.
+          </p>
+          <img src="images/ideas.png" alt="ideas image" />
+        </div>
       </section>
       <!--realization-->
       <section class="text_boxes">
