--- a/Ez_Waxom/index.html
+++ b/Ez_Waxom/index.html
@@ -17,7 +17,10 @@
     <script>
       WebFont.load({
         google: {
-          families: ["Montserrat:300,400,700", "Raleway:300,400,500,700,800"],
+          families: [
+            "Montserrat:300,400,700",
+            "Raleway:300,400,500,600,700,800",
+          ],
         },
       });
     </script>
@@ -158,10 +161,121 @@
       </section>
       <!--realization-->
       <section class="text_boxes">
-        <div class="container"></div>
+        <div class="container clearfix">
+          <div class="box_contents">
+            <h4><span>Waxom</span> Multipurpose WordPress Theme</h4>
+            <p>Waxom Multipurpose WordPress Theme</p>
+          </div>
+          <a href="" class="btn">Purchase Now</a>
+        </div>
       </section>
       <!--text_boxes-->
-      <section class="latest_projects container"></section>
+      <section class="latest_projects container">
+        <h3 class="content_tt">Our Latest Projects.</h3>
+        <p class="content_desc">
+          Investigationes demonstraverunt lectores legere me lius quod ii legunt
+          saepius. Claritas est etiam processus dynamicus, qui sequitur
+          mutationem consuetudium.
+          <div class="projects_wrap">
+            
+            <input type="radio" value="all" id="filter_all" name="filter" checked>
+            <label for="filter_all">All</label>
+
+            <input type="radio" value="Web Design" id="filter_web" name="filter">
+            <label for="filter_web">Web Design</label>
+
+            <input type="radio" value="Mobile Design" id="filter_mobile" name="filter">
+            <label for="filter_mobile">Mobile Design</label>
+
+            <input type="radio" value="Illustration" id="filter_illust" name="filter">
+            <label for="filter_illust">Illustration</label>
+
+            <input type="radio" value="Photography" id="filter_photo" name="filter">
+            <label for="filter_photo">Photography</label>
+
+            <ul class="project_list clearfix">
+              <li class="web">
+                <div class="imgWrap">
+                  <img src="images/project_01.jpg" alt="project_01 image">
+                  <div class="hover_contents">
+                    <a href=""><i class="fas fa-link"></i></a>
+                    <a href=""><i class="fas fa-search"></i></a>
+                  </div>
+                </div>
+                <div class="contents">
+                  <h4>Claritas Etiam Processus</h4>
+                  <p>Photography, Nature</p>
+                </div>
+              </li>
+              <li class="web">
+                <div class="imgWrap">
+                  <img src="images/project_02.jpg" alt="project_02 image">
+                  <div class="hover_contents">
+                    <a href=""><i class="fas fa-link"></i></a>
+                    <a href=""><i class="fas fa-search"></i></a>
+                  </div>
+                </div>
+                <div class="contents">
+                  <h4>Claritas Etiam Processus</h4>
+                  <p>Photography, Nature</p>
+                </div>
+              </li>
+              <li class="mobile">
+                <div class="imgWrap">
+                  <img src="images/project_03.jpg" alt="project_03 image">
+                  <div class="hover_contents">
+                    <a href=""><i class="fas fa-link"></i></a>
+                    <a href=""><i class="fas fa-search"></i></a>
+                  </div>
+                </div>
+                <div class="contents">
+                  <h4>Claritas Etiam Processus</h4>
+                  <p>Photography, Nature</p>
+                </div>
+              </li>
+              <li class="illust">
+                <div class="imgWrap">
+                  <img src="images/project_04.jpg" alt="project_04 image">
+                  <div class="hover_contents">
+                    <a href=""><i class="fas fa-link"></i></a>
+                    <a href=""><i class="fas fa-search"></i></a>
+                  </div>
+                </div>
+                <div class="contents">
+                  <h4>Claritas Etiam Processus</h4>
+                  <p>Photography, Nature</p>
+                </div>
+              </li>
+              <li class="photo">
+                <div class="imgWrap">
+                  <img src="images/project_05.jpg" alt="project_05 image">
+                  <div class="hover_contents">
+                    <a href=""><i class="fas fa-link"></i></a>
+                    <a href=""><i class="fas fa-search"></i></a>
+                  </div>
+                </div>
+                <div class="contents">
+                  <h4>Claritas Etiam Processus</h4>
+                  <p>Photography, Nature</p>
+                </div>
+              </li>
+              <li class="web">
+                <div class="imgWrap">
+                  <img src="images/project_06.jpg" alt="project_06 image">
+                  <div class="hover_contents">
+                    <a href=""><i class="fas fa-link"></i></a>
+                    <a href=""><i class="fas fa-search"></i></a>
+                  </div>
+                </div>
+                <div class="contents">
+                  <h4>Claritas Etiam Processus</h4>
+                  <p>Photography, Nature</p>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </p>
+      </section>
       <!--latest_projects-->
       <section class="video"></section>
       <!--video-->
