--- a/Ez_Waxom/index.html
+++ b/Ez_Waxom/index.html
@@ -178,20 +178,20 @@
           mutationem consuetudium.
           <div class="projects_wrap">
             
-            <input type="radio" value="all" id="filter_all" name="filter" checked>
-            <label for="filter_all">All</label>
+            <input type="radio" value="all" id="filter-all" name="filter" checked>
+            <label for="filter-all">All</label>
 
-            <input type="radio" value="Web Design" id="filter_web" name="filter">
-            <label for="filter_web">Web Design</label>
+            <input type="radio" value="Web Design" id="filter-web" name="filter">
+            <label for="filter-web">Web Design</label>
 
-            <input type="radio" value="Mobile Design" id="filter_mobile" name="filter">
-            <label for="filter_mobile">Mobile Design</label>
+            <input type="radio" value="Mobile Design" id="filter-mobile" name="filter">
+            <label for="filter-mobile">Mobile Design</label>
 
-            <input type="radio" value="Illustration" id="filter_illust" name="filter">
-            <label for="filter_illust">Illustration</label>
+            <input type="radio" value="Illustration" id="filter-illust" name="filter">
+            <label for="filter-illust">Illustration</label>
 
-            <input type="radio" value="Photography" id="filter_photo" name="filter">
-            <label for="filter_photo">Photography</label>
+            <input type="radio" value="Photography" id="filter-photo" name="filter">
+            <label for="filter-photo">Photography</label>
 
             <ul class="project_list clearfix">
               <li class="web">
@@ -273,13 +273,42 @@
                 </div>
               </li>
             </ul>
+            <p class="load_more">
+              <a href="" class="btn">Load more</a>
+            </p>
           </div>
         </p>
       </section>
       <!--latest_projects-->
-      <section class="video"></section>
+      <section class="video">
+        <div class="contents">
+          <a class="icon" href="#overlay"><i class="far fa-play-circle"></i></a>
+          <h3 class="content_tt">Waxom Video Presentation</h3>
+          <p class="content_desc">Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius, qui sequitur mutationem consuetudium.</p>
+          <span>03:26</span>
+        </div>
+        <div id="overlay">
+          <div class="inner">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Rk6_hdRtJOE" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          </div>
+
+        </div>
+      </section>
       <!--video-->
-      <section class="excellent_mobile container"></section>
+      <section class="excellent_mobile container">
+        <img src="images/excellent_mobile.png" alt="excellent_mobile">
+        <div class="contents">
+              <a class="icon" href="#overlay"><i class="far fa-play-circle"></i></a>
+              <h3 class="content_tt">Excellent for Mobile Devices.</h3>
+              <p class="content_desc">Qisi enim ad minim veniam, quis nostrud exerci tation ullamcorper suscipit lobortis nisl ut aliquip ex ea commodo consequat. Investigationes demonstraverunt lectores legere me lius quod ii legunt saepius claritas. Eodem modo typi, qui nunc nobis videntur parum clari, fiant sollemnes in futurum.</p>
+              <ul>
+                <li><span>Nam liber tempor cum soluta nobis eleifend option;</span></li>
+                <li><span>Option congue nihil imperdiet doming id quod mazim placerat facer;</span></li>
+                <li><span>Eodem modo typi, qui nunc nobis videntur parum futurum;</span></li>
+                <li><span>Investigationes demonstraverunt lectores</span></li>
+              </ul>
+        </div>
+      </section>
       <!--excellent_mobile-->
       <section class="counters">
         <div class="container"></div>
