--- a/Ez_Waxom/index.html
+++ b/Ez_Waxom/index.html
@@ -40,8 +40,8 @@
           slideWidth: 370,
           slideMargin: 30,
           pager: false,
-          nextSelector:'.controls .next',
-          prevSelector:'.controls .prev'
+          nextSelector:'.recent_posts .controls .next',
+          prevSelector:'.recent_posts .controls .prev'
         });
       });
       </script>
@@ -497,10 +497,85 @@
     </main>
     <footer>
       <div class="footer_top">
-        <div class="container"></div>
+        <div class="container clearfix">
+          <div class="col-one-forth">
+            <h2 class="footer_logo"><a href="">footer logo</a></h2>
+            <p>
+              Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet dolore magna aliquam erat volutpat. Ut wisi enim ad minim veniam, quis nostrud exerci suscipit lobortis claritatem.
+            </p>
+            <a href="">Read More<span><i class="fa fa-caret-right"></i></span></a>
+          </div>
+          <div class="col-one-forth">
+            <h3>Recent Posts</h3>
+            <ul class="footer_list">
+              <li>
+                <span class="post_date">September 08, 2015</span>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetuer adipiscing elit
+                </p>
+              </li>
+              <li>
+                <span class="post_date">September 08, 2015</span>
+                <p>
+                  Diam nonummy nibh euismod tincidunt ut laoreet dolore magna
+                </p>
+              </li>
+              <li>
+                <span class="post_date">September 08, 2015</span>
+                <p>
+                  Claritas est etiam processus dynamicus, qui sequitur mutationem per seacula quarta decima
+                </p>
+              </li>
+            </ul>
+          </div>
+          <div class="col-one-forth">
+            <h3>Our Twitter</h3>
+            <ul class="footer_list">
+              <li>
+                <p>
+                  <span class="twitter_id">@waxom</span> Cum soluta nobis eleifend option congue nihil imperdiet doming
+                </p>
+                <span class="post_date">3 mins ago</span>
+              </li>
+              <li>
+                <p>
+                  Mirum est <span class="twitter_id">#envato</span> notare quam littera gothica, quam nunc putamus parum anteposuerit litterarum
+                </p>
+                <span class="post_date">5 hours ago</span>
+              </li>
+              <li>
+                <p>
+                  <span class="twitter_id">@waxom</span> Cum soluta nobis eleifend option congue nihil imperdiet doming
+                </p>
+                <span class="post_date">20 days ago</span>
+              </li>
+            </ul>
+          </div>
+          <div class="col-one-forth">
+            <h3>Dribble Widget</h3>
+            <ul class="dribble">
+              <li><a href=""><img src="images/dribble_01.jpg" alt="dribble_01"></a></li>
+              <li><a href=""><img src="images/dribble_02.jpg" alt="dribble_02"></a></li>
+              <li><a href=""><img src="images/dribble_03.jpg" alt="dribble_03"></a></li>
+              <li><a href=""><img src="images/dribble_04.jpg" alt="dribble_04"></a></li>
+            </ul>
+          </div>
+        </div>
       </div>
       <div class="footer_bottom">
-        <div class="container"></div>
+        <div class="container">
+          <div class="copy">
+            <p>
+              Copyright ©&copy; 2018 <span>Waxom</span><span class="devider">&#124;</span><a href="">Privacy Policy</a> <span class="devider">&#124;</span> <a href="">FAQ</a>
+              <span class="devider">&#124;</span>  <a href="">Support</a>
+            </p>
+          </div>
+          <div class="designer">
+            <p>
+              Designed by <a href="">ThemeFire</a> <span class="devider">&#124;</span> Only on <a href="">Envato Market</a>
+            </p>
+          </div>
+        </div>
       </div>
     </footer>
   </body>
