waxom mobile finish

--- a/Ez_Waxom/index.html
+++ b/Ez_Waxom/index.html
@@ -344,7 +344,7 @@
       <!--excellent_mobile-->
       <section class="counters">
         <div class="container">
-          <ul>
+          <ul class="clearfix">
             <li>
               <span class="icon client">client</span>
               <h3>3587</h3>
